# AWSDMSGlueETL

./: AWS  README.md  Steps  Useful
AWS-CodeCommit/Auxiliary/LambdaFunctions/CopyFromCodeCommitS3/: LambdaFunction.py  create_lambda_deployment_package.sh  pyproject.toml  requirements.txt
AWS-CodeCommit/Parameters/: Parameters.yml
AWS-CodeCommit/Secrets/: Secrets.yml
DB_L_000/: docker-compose.yml
IaC/: 000_Policy.yml  001_DMS.yaml  001_PostgreVPC.yml  002_VPC_Peering.yml  003_RDS.yml  003_VPCPeeringRouteTables.yml  004_Endpoints.yml  005_DMS_Task.yml  999_Test_Bucket.yml
Ignore/: Useful  all.txt  gluejobs manual.txt
Ignore/IaC/: 001_SourceVPC.yml  005_DMS_Task.yml
Ignore_2/: Steps  gluejobs yml.txt  gluejobs.txt  manual.txt  yml.txt
Ignore_2/IaC/: 002_VPC_Peering.yml
