[tool.poetry]
name = "copyfromcodecommits3"
version = "0.1.0"
description = ""
authors = ["elwes <elweshonorato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.84"
pymysql = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
